syntax = "proto3";

package Sailbot;

message TestingCommand {
  int32 id = 1;
  string command = 2;
}
